# Stock-Management

./: .dockerignore  .gitignore  README.md  dockerfile  entrypoint.sh  pyproject.toml
.github/workflows/: deploy.yml
Stock/: asgi.py  settings.py  urls.py  urls_tenant.py  views.py  wsgi.py
Stock/middleware/: tenant_urlconf_middleware.py
stock_management/: models.py  serializers.py  urls.py  views.py
stock_management/adapter/serializers/: expense_serializer.py
stock_management/adapter/views/: item_view.py
stock_management/apis/v1/auth/: auth_service.py  permissions.py
stock_management/apis/v1/views/: admin_login_view.py  create_user_view.py  expense_view.py  item_view.py  (+1 more)
stock_management/migrations/: 0001_initial.py  0002_adminuser.py  0003_delete_adminuser.py
stock_management/serializers/: item_serializer.py  user_serializer.py
stock_management/services/: auth_service.py  create_user_service.py  expense_service.py  item_service.py  user_detail_service.py
tenants/: admin.py  models.py
tenants/migrations/: 0001_initial.py
user_app/: admin.py  apps.py  models.py  services.py  signals.py  urls.py  views.py
user_app/auth/: admin_login_view.py
user_app/management/commands/: bootstrap_tenant.py
user_app/migrations/: 0001_initial.py  0002_alter_adminuser_tenant.py  0002_alter_baseuser_tenant.py  0003_delete_adminuser.py  0004_adminuser.py
user_app/serializers/: auth_serializer.py  user_serializer.py
user_app/services/: auth_service.py  create_user.py  user_detail_service.py
user_app/views/: admin_user_view.py
utils/: current_tenant.py
(+8 files in other folders)
